@@ -448,8 +448,8 @@ namespace libtorrent
 			, address const& tracker_ip
 			, std::list<address> const& ip_list
 			, std::vector<peer_entry>& e, int interval, int min_interval
-			, int complete, int incomplete, address const& external_ip
-			, std::string const& trackerid);
+			, int complete, int incomplete, int downloaded
+			, address const& external_ip, std::string const& trackerid);
 		virtual void tracker_request_error(tracker_request const& r
 			, int response_code, error_code const& ec, const std::string& msg
 			, int retry_interval);
@@ -457,6 +457,8 @@ namespace libtorrent
 			, std::string const& msg);
 		virtual void tracker_scrape_response(tracker_request const& req
 			, int complete, int incomplete, int downloaded, int downloaders);
+
+		void update_scrape_state();
 
 		// if no password and username is set
 		// this will return an empty string, otherwise
@@ -1338,7 +1340,7 @@ namespace libtorrent
 
 		// the scrape data from the tracker response, this
 		// is optional and may be 0xffffff
-		unsigned int m_downloaders:24;
+		unsigned int m_downloaded:24;
 
 		// round-robin index into m_interfaces
 		mutable boost::uint8_t m_interface_index;
